# befit

./: .coverage  .env.example  .env_example  .gitignore  .goosehints  AGENTS.md  ARCHITECTURE_DIAGRAM.md  DECISIONS.md  DEPLOYMENT.md  EVIDENCE_LOG.md  LIMITATIONS.md  Procfile  README.md  RISK_LOG.md  SETUP_CHECKLIST.md  TRACE_LOG.md  befit_scan_and_plan.yaml  env.example  netlify.toml  pyproject.toml  render.yaml  start.bat
.github/workflows/: deploy.yml  tests.yml
backend/: __init__.py  main.py  schemas.py
backend/agents/: __init__.py  context_interpreter.py  plan_writer.py  planner.py  reflector.py  risk_checker.py  vision_interpreter.py
frontend/: app.js  camera-test.html  index.html  style.css
tests/: test_android_tts.html  test_question_answering.py  test_tts_endpoint.py
