[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "befit"
version = "0.1.0"
description = "A Goose-powered multimodal wellness assistant"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Befit Team" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "openai==1.3.7",
    "httpx==0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "ruff==0.1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
