[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "befit"
version = "0.1.0"
description = "A Goose-powered multimodal wellness assistant"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Befit Team" }]
requires-python = ">=3.10,<3.15"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "python-dotenv==1.1.0",
    "pydantic==2.11.1",
    "openai==1.70.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.1.0",
    "black==25.1.0",
    "ruff==0.11.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.1.0",
    "black==25.1.0",
    "ruff==0.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
